--- a/基础练习/a.b.f/a.b.f.csproj
+++ b/基础练习/a.b.f/a.b.f.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="GenericClass.cs" />
     <Compile Include="HelperAttribute.cs" />
+    <Compile Include="People.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionTest.cs" />
